fixed scroll on smaller screens

--- a/src/Pages/Home/Home.module.css
+++ b/src/Pages/Home/Home.module.css
@@ -477,6 +477,9 @@
 }
 
 @media (max-width: 768px) {
+  html {
+    scroll-snap-type: y none;
+  }
   .presentation {
     flex-direction: column;
     align-items: center;
